--- a/_data/categories.yml
+++ b/_data/categories.yml
@@ -1,5 +1,6 @@
-- name: Arts / Culture / History
-  logo: /img/categories/arts-culture-history.svg
+- name: Elevation
+  logo: /img/categories/terrain.svg
+  logo_credit: ''
   featured: true
 - name: Budget / Finance
   logo: /img/categories/budget-finance.svg
@@ -19,6 +20,7 @@
   featured: true
 - name: Environment
   logo: /img/categories/environment.svg
+  logo_credit: ''
   featured: true
 - name: Food
   logo: /img/categories/food.svg
@@ -34,6 +36,7 @@
   featured: true
 - name: Planning / Zoning
   logo: /img/categories/planning-zoning.svg
+  logo_credit: ''
   featured: true
 - name: Public Safety
   logo: /img/categories/public-safety.svg
@@ -41,6 +44,7 @@
   featured: true
 - name: Real Estate / Land Records
   logo: /img/categories/real-estate-land-records.svg
+  logo_credit: ''
   featured: true
 - name: Transportation
   logo: /img/categories/transportation.svg
