--- a/_data/categories.yml
+++ b/_data/categories.yml
@@ -54,3 +54,7 @@
   logo: /img/categories/uncategorized.svg
   logo_credit: Edward Boatman from the Noun Project
   featured: true
+- name: Pointcloud
+  logo: /img/categories/pointcloud.svg
+  logo_credit: ''
+  featured: true
