--- a/_data/schemas/default.yml
+++ b/_data/schemas/default.yml
@@ -40,7 +40,7 @@ resource_fields:
     datajson: distribution.format
     form_template: form/dropdown.html
     values:
-      - text
+      - textingisbad
       - json
       - geojson
       - csv
