--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ baseurl: /jkan
 logo: /img/jkan.png
 
 # Site theme
-jkan_theme: Readable
+jkan_theme: Paper
 
 # Authentication
 github_client_id: ffba000e1a7b8b8e5ff9
