--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Geomatics Datahub
-greeting: Geomatics Datahub
+title: Geomatics Resources
+greeting: Geomatics Resources
 description: A collection of useful datasets, portals, examples and documentation.
 baseurl: /datahub
 logo: /img/jkan.png
