--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Geomatics Resources
 greeting: Geomatics Resources
 description: A collection of useful datasets, portals, examples and documentation.
-baseurl: /datahub
+baseurl: /resources
 logo: /img/jkan.png
 
 # Site theme
