--- a/_config.yml
+++ b/_config.yml
@@ -3,6 +3,7 @@ greeting: Geomatics Resources
 description: A collection of useful datasets, portals, examples and documentation.
 baseurl: /resources
 logo: /img/jkan.png
+explanation: Dummy text is also used to demonstrate the appearance of different typefaces and layouts, and in general the content of dummy text is nonsensical. Due to its widespread use as filler text for layouts, non-readability is of great importance: human perception is tuned to recognize certain patterns and repetitions in texts. If the distribution of letters and 'words' is random, the reader will not be distracted from making a neutral judgement on the visual impact and readability of the typefaces (typography), or the distribution of text on the page (layout or type area). For this reason, dummy text usually consists of a more or less random series of words or syllables. This prevents repetitive patterns from impairing the overall visual impression and facilitates the comparison of different typefaces. Furthermore, it is advantageous when the dummy text is relatively realistic so that the layout impression of the final publication is not compromised.
 
 # Site theme
 jkan_theme: Lumen
