--- a/_data/categories.yml
+++ b/_data/categories.yml
@@ -24,7 +24,7 @@
   featured: true
 - name: Topography
   logo: /img/categories/topography.svg
-  logo_credit: database by Creative Stall from the Noun Project
+  logo_credit: travel map by sahua d from the Noun Project
   featured: true
 - name: Database
   logo: /img/categories/database.svg
