--- a/_data/categories.yml
+++ b/_data/categories.yml
@@ -1,4 +1,4 @@
-- name: Borders
+- name: Boundaries
   logo: /img/categories/borders.svg
   logo_credit: senegal by Anneka Van Scoyoc from the Noun Project
   featured: true
