--- a/_data/categories.yml
+++ b/_data/categories.yml
@@ -74,7 +74,7 @@
   logo: /img/categories/planning-zoning.svg
   logo_credit: jkan original
   featured: true
-- name: Nuts
+- name: Utilities
   logo: /img/categories/energy.svg
   logo_credit: Energy by David from the Noun Project
   featured: true
