--- a/_config.yml
+++ b/_config.yml
@@ -64,7 +64,7 @@ digital_analytics_program:
 
 # Hypothesis.io - Annotator
 hypothesis:
-  enabled: false
+  enabled: true
 
 # Twitter
 twittercard:
