--- a/_config.yml
+++ b/_config.yml
@@ -21,6 +21,8 @@ navigation:
     url: /datasets/
   - title: Organizations
     url: /organizations/
+  - title: Collaborate
+    url: /collaborate/
 
 # Collections
 collections:
